fix spacing for diff length of info

--- a/src/components/Result/style.scss
+++ b/src/components/Result/style.scss
@@ -9,22 +9,30 @@ h3 {
   padding: 10px;
   margin: 10px auto;
   border-radius: 15px;
-  max-width: 425px;
-  max-height: 550px;
+  width: 350px;
+  height: 510px;
+  display: flex;
+  flex-direction: column;
+  @media (min-width: 768px) {
+    width: 400px;
+    height: 520px;
+  }
 }
 
 .latinName {
   font-size: 0.7em;
   text-align: center;
-  line-height: 2em;
   margin: 0 20px;
-  border-bottom: 2px solid rgb(255, 149, 0);
+  padding: 5px 0;
+  border-top: 2px solid rgb(255, 149, 0);
 }
 .name {
   text-align: center;
-  font-size: 1.5em;
-  line-height: 1.7em;
-  padding: 5px;
+  font-size: 1.3em;
+  font-weight: 800;
+  line-height: 1.2em;
+  padding-bottom: 5px;
+  white-space: nowrap;
 }
 
 .animalContainer {
@@ -35,8 +43,8 @@ h3 {
   border: 10px solid rgb(163, 128, 93);
   box-shadow: 4px 5px 8px rgb(105, 105, 105);
   @media (min-width: 768px) {
-    width: 350px;
-    height: 275px;
+    width: 325px;
+    height: 220px;
   }
 }
 .animalImg {
@@ -79,28 +87,35 @@ h3 {
   justify-content: center;
   background: rgb(250, 172, 63);
   color: black;
-  margin: 10px auto 0;
+  margin: 12px auto 0;
   padding: 8px 5px;
   width: 90%;
   @media (min-width: 768px) {
     width: 80%;
   }
 }
+.physicalInfo > * {
+  margin: 0 2px;
+}
 .mainInfo {
-  padding: 0 15px;
+  flex: 1 1 auto;
+  padding: 5px 10px;
   margin: 0px 20px;
   line-height: 1.3em;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   border-bottom: 2px solid rgb(255, 149, 0);
+  font-size: 0.8em;
 }
 .mainInfo > * {
-  padding: 5px 0;
+  padding: 3px 0;
 }
 
 .cardNum {
   display: block;
   text-align: right;
   font-size: 0.5em;
-  padding: 2px 0;
+  padding: 5px 10px 0;
+  bottom: 20px;
 }
